afternoon proj 5.1 media queries

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-media": "^1.8.0",
     "react-scripts": "2.0.5"
   },
   "scripts": {
